add jwt token to login user/guard path

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_CONNECTION_URI="mongodb://admin:password2019@ds153495.mlab.com:53495/event-graphql"
 TIME_ZONE='Australia/Sydney'
+AUTH_SECRET="mySuperSecretKey"
